kubernetes/deployment-and-service.yml

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cont-a
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cont-ab
  template:
    metadata:
      labels:
        app: cont-ab
    spec:
      containers:
      - name: cont-a
        image: gcr.io/project-for-tf-cicd-kube/cont-a:v2
	imagePullPolicy: Always
        ports:
        - containerPort: 8080
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cont-b
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cont-ab
  template:
    metadata:
      labels:
        app: cont-ab
    spec:
      containers:
      - name: cont-b
        image: gcr.io/project-for-tf-cicd-kube/cont-b:v2
	imagePullPolicy: Always
        ports:
        - containerPort: 8080
      
---

apiVersion: v1
kind: Service
metadata:
  name: service-ab
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: cont-ab
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cont-c
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cont-cd
  template:
    metadata:
      labels:
        app: cont-cd
    spec:
      containers:
      - name: cont-c
        image: gcr.io/project-for-tf-cicd-kube/cont-c:v2
	imagePullPolicy: Always
        ports:
        - containerPort: 8080
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cont-d
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cont-cd
  template:
    metadata:
      labels:
        app: cont-cd
    spec:
      containers:
      - name: cont-d
        image: gcr.io/project-for-tf-cicd-kube/cont-d:v2
	imagePullPolicy: Always
        ports:
        - containerPort: 8080
      
---

apiVersion: v1
kind: Service
metadata:
  name: service-cd
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: cont-cd
